r18,r19第2轮提交